# stellar-scope

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INITIALIZATION_CHECKLIST.md  INIT_SUMMARY.md  LICENSE  README.md  STRUCTURE.md  package.json
apps/web/: next.config.js  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/address/[id]/: page.tsx
apps/web/src/app/tx/[hash]/: page.tsx
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
infrastructure/docker/: Dockerfile.api  Dockerfile.indexer  docker-compose.yml
infrastructure/scripts/: setup.sh
services/api/: Cargo.toml
services/api/src/: main.rs
services/api/src/db/: mod.rs
services/api/src/handlers/: mod.rs
services/api/src/routes/: mod.rs
services/indexer/: Cargo.toml
services/indexer/src/: main.rs
services/indexer/src/decoding/: mod.rs
services/indexer/src/ingestion/: mod.rs
services/indexer/src/pipeline/: mod.rs
services/workers/: Cargo.toml
services/workers/src/: main.rs
services/workers/src/jobs/: mod.rs
