[workspace]
members = [
    "services/api",
    "services/indexer",
    "services/workers",
    "crates/decoder",
    "crates/db",
    "crates/types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["StellarScope Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
